<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detalles_fichaje"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvDetailFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDetailEntrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrada"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDetailSalida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salida"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvDetailLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubicacion"
            android:layout_marginBottom="8dp" />

        <org.osmdroid.views.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="visible"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/btnVerMapa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_mapa"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>